--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,8 +34,9 @@ input{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-radius: 0.5rem;
-    box-shadow: 0px 5px 20px gray;
+    border-radius: 1rem;
+    border-color: grey;
+    border-style:solid;
     padding: 2em 4em;
 }
 
