--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,12 +5,27 @@
 .App{
     display: flex;
     justify-content: center;
-    align-items: center;
     margin: 0;
     padding: 0;
     min-height: 720px;
     height: 100vh;
     
+}
+
+table{
+    table-layout: fixed;
+    width: 1000px;
+    border-collapse: collapse;
+    border-spacing: 0;
+    
+}
+
+th, tr{
+    text-align: left;
+}
+
+th, td{
+    padding: 1rem;
 }
 
 body{
@@ -19,6 +34,18 @@ body{
 
 input{
     padding: 0.5rem;
+}
+
+tr:hover{
+    background-color: lightcyan;
+}
+
+.dashboard-section{
+    border: solid;
+    border-radius: 0.2rem;
+    box-sizing: border-box;
+    padding: 2em;
+    margin-top: 1rem;
 }
 
 .hero{
@@ -51,8 +78,6 @@ input{
 }
 
 .navbar{
-    position: absolute;
-    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -81,4 +106,24 @@ input{
     display: flex;
     justify-content: space-between;
     list-style-type: none;
+}
+
+.dashboard-button{
+    width: 90px;
+    height: 40px;
+    border: none;
+    border-radius: 0.2rem;
+}
+
+#edit-button{
+    background-color: lightblue;
+    color: white;
+}
+
+#delete-button{
+    background-color: pink;
+}
+
+#create-button{
+    background-color: lightgreen;
 }
