--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,12 +2,23 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+@media (max-width: 500px) {
+    *{
+        font-size: 1rem;
+    }
+
+    .form{
+        padding: 0;
+        border: none;
+        border-width: 0px;
+    }
+}
+
 .App{
     display: flex;
     justify-content: center;
     margin: 0;
     padding: 0;
-    min-height: 720px;
     
 }
 
@@ -56,7 +67,7 @@ button:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 800px;
+    min-height: 400px;
     font-size: 2rem;
 }
 
