--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,26 @@
     }
 }
 
+@media (max-width: 750px) {
+    td, th{
+        font-size: 0.7rem;
+    }
+    
+    .dashboard-section{
+        border: none !important;
+    }
+    
+    .dashboard-button{
+        max-width: 40px;
+        max-height: 25px;
+        font-size: 0.5rem;
+    }
+    
+    table{
+        width: 100%;
+    }
+}
+
 .App{
     display: flex;
     justify-content: center;
@@ -24,7 +44,7 @@
 
 table{
     table-layout: fixed;
-    width: 1000px;
+    max-width: 650px;
     border-collapse: collapse;
     border-spacing: 0;
     
